# red-forest

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: job-test.yml
examples/: forest_in_warsaw.ipynb
red_forest/geometry/: area_processor.py  file_processor.py  file_processor_interface.py  node_processor.py  way_processor.py
red_forest/io/: area_processor.py  file_processor.py  node_processor.py  way_processor.py
tests/: test_area_processor.py  test_file_processor.py  test_node_processor.py  test_way_processor.py
tests/resources/: zalesie.pbf
